--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ pygmentsCodefencesGuessSyntax = true
 #  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
   subtitle = "microblogging and status updates"
   logo = "images/Abraham.jpg"
-  favicon = "img/favicon.ico"
+  favicon = "images/Abraham.jpg"
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
