--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://dreamy-bardeen-2c9445.netlify.com/"
+baseurl = "https://abraham.uno/"
 DefaultContentLanguage = "en"
 #DefaultContentLanguage = "ja"
 title = "Abraham's Microblog"
