--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ pygmentsCodefencesGuessSyntax = true
   #xing = "username"
   #stackoverflow = "users/XXXXXXX/username"
   #snapchat = "username"
-  instagram = "unoabraham"
+  #instagram = "unoabraham"
   #youtube = "user/username" # or channel/channelname
   #soundcloud = "username"
   #spotify = "username"
