--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ pygmentsCodefencesGuessSyntax = true
   #bitbucket = "username"
   twitter = "unoabraham"
   #reddit = "username"
-  linkedin = "unoabraham"
+  #linkedin = "unoabraham"
   #xing = "username"
   #stackoverflow = "users/XXXXXXX/username"
   #snapchat = "username"
