--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ pygmentsCodefencesGuessSyntax = true
 [Params]
 #  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
   subtitle = "microblogging and status updates"
-  logo = "images/Abraham.jpg"
-  favicon = "images/Abraham.jpg"
+  logo = "http://res.cloudinary.com/abraham/image/upload/t_media_lib_thumb/v1526951769/Abraham.jpg"
+  favicon = "http://res.cloudinary.com/abraham/image/upload/t_media_lib_thumb/v1526951769/Abraham.jpg"
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
