--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ pygmentsCodefencesGuessSyntax = true
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
-  comments = true
+  comments = false
   readingTime = true
   useHLJS = true
   socialShare = true
