--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,8 @@ lastmod = false
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
+  rssLimit = 20
+  rssFullContent = true
   comments = false
   readingTime = true
   useHLJS = true
