--- a/config.toml
+++ b/config.toml
@@ -84,21 +84,31 @@ lastmod = false
     weight = 3
 
 [[menu.main]]
+    name = "Listening"
+    url = "page/listening/"
+    weight = 4
+
+#[[menu.main]]
+    #name = "Watching"
+    #url = "page/watching/"
+    #weight = 5
+
+[[menu.main]]
     name = "IndieWeb"
     url = "page/indieweb/"
-    weight = 4
+    weight = 6
 
 [[menu.main]]
     name = "Categories"
     url = "categories"
-    weight = 5
+    weight = 7
 
 [[menu.main]]
     name = "Tags"
     url = "tags"
-    weight = 6
+    weight = 8
 
 [[menu.main]]
     name = "Search"
     url = "page/search/"
-    weight = 7
+    weight = 9
